...
        
        return when (buttonFunction) {
            com.na982.opichelper.domain.entity.ButtonFunction.QuestionPlay -> {
                com.na982.opichelper.domain.entity.ButtonConfig(
                    function = buttonFunction,
                    state = buttonState,
                    text = "질문 재생"
                )
            }
            com.na982.opichelper.domain.entity.ButtonFunction.AnswerPlay -> {
                com.na982.opichelper.domain.entity.ButtonConfig(
                    function = buttonFunction,
                    state = buttonState,
                    text = "답변 재생"
                )
            }
            com.na982.opichelper.domain.entity.ButtonFunction.MemorizeTest -> {
                com.na982.opichelper.domain.entity.ButtonConfig(
                    function = buttonFunction,
                    state = buttonState,
                    text = "암기 테스트"
                )
            }
            com.na982.opichelper.domain.entity.ButtonFunction.RecordingPlay -> {
                com.na982.opichelper.domain.entity.ButtonConfig(
                    function = buttonFunction,
                    state = buttonState,
...
